tests/rosetta/out/Smalltalk/averages-simple-moving-average.out
/workspace/mochi/tests/rosetta/out/Smalltalk/averages-simple-moving-average.st:54: parse error, expected '|' or identifier
